# KPI_DevOPS

./: .gitignore  Dockerfile  FuncClass.cpp  FuncClass.h  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  data.txt  funcclass  funcclass.elf  main.cpp  myprogram  scriptA.sh  scriptB.sh  test  test.cpp
.deps/: main.Po  test.Po
.github/workflows/: c-cpp.yml  multistage.yml  tar.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
deb/DEBIAN/: control
